c/torch_api_generated.h

void atg_full(tensor *, int64_t *size_data, int size_len, scalar fill_value, int options_kind, int options_device);
void atg_full_like(tensor *, tensor self, scalar fill_value);
void atg_full_like1(tensor *, tensor self, scalar fill_value, int options_kind, int options_device);
void atg_full_out(tensor *, tensor result, int64_t *size_data, int size_len, scalar fill_value);
void atg_gather(tensor *, tensor self, int64_t dim, tensor index);
void atg_gather_out(tensor *, tensor result, tensor self, int64_t dim, tensor index);
void atg_ge(tensor *, tensor self, scalar other);
void atg_ge1(tensor *, tensor self, tensor other);
void atg_ge_(tensor *, tensor self, scalar other);
void atg_ge_1(tensor *, tensor self, tensor other);
void atg_ge_out(tensor *, tensor result, tensor self, scalar other);
void atg_ge_out1(tensor *, tensor result, tensor self, tensor other);
void atg_gels(tensor *, tensor self, tensor A);
void atg_gels_out(tensor *, tensor X, tensor qr, tensor self, tensor A);
void atg_geometric_(tensor *, tensor self, double p);
void atg_geqrf(tensor *, tensor self);
void atg_geqrf_out(tensor *, tensor result0, tensor result1, tensor self);
void atg_ger(tensor *, tensor self, tensor vec2);
void atg_ger_out(tensor *, tensor result, tensor self, tensor vec2);
void atg_gesv(tensor *, tensor self, tensor A);
void atg_gesv_out(tensor *, tensor solution, tensor lu, tensor self, tensor A);
void atg_glu(tensor *, tensor self, int64_t dim);
void atg_glu_backward(tensor *, tensor grad_output, tensor self, int64_t dim);
void atg_glu_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, int64_t dim);
void atg_glu_out(tensor *, tensor output, tensor self, int64_t dim);
void atg_grad(tensor *, tensor self);
void atg_grid_sampler(tensor *, tensor input, tensor grid, int64_t interpolation_mode, int64_t padding_mode);
void atg_grid_sampler_2d(tensor *, tensor input, tensor grid, int64_t interpolation_mode, int64_t padding_mode);
void atg_grid_sampler_2d_backward(tensor *, tensor grad_output, tensor input, tensor grid, int64_t interpolation_mode, int64_t padding_mode);
void atg_grid_sampler_3d(tensor *, tensor input, tensor grid, int64_t interpolation_mode, int64_t padding_mode);
void atg_grid_sampler_3d_backward(tensor *, tensor grad_output, tensor input, tensor grid, int64_t interpolation_mode, int64_t padding_mode);
void atg_group_norm(tensor *, tensor input, int64_t num_groups, tensor weight, tensor bias, double eps, int cudnn_enabled);
void atg_gru(tensor *, tensor input, tensor hx, tensor *params_data, int params_len, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional, int batch_first);
void atg_gru1(tensor *, tensor data, tensor batch_sizes, tensor hx, tensor *params_data, int params_len, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional);
void atg_gru_cell(tensor *, tensor input, tensor hx, tensor w_ih, tensor w_hh, tensor b_ih, tensor b_hh);
void atg_gt(tensor *, tensor self, scalar other);
void atg_gt1(tensor *, tensor self, tensor other);
void atg_gt_(tensor *, tensor self, scalar other);
void atg_gt_1(tensor *, tensor self, tensor other);
void atg_gt_out(tensor *, tensor result, tensor self, scalar other);
void atg_gt_out1(tensor *, tensor result, tensor self, tensor other);
void atg_hamming_window(tensor *, int64_t window_length, int options_kind, int options_device);
void atg_hamming_window1(tensor *, int64_t window_length, int periodic, int options_kind, int options_device);
void atg_hamming_window2(tensor *, int64_t window_length, int periodic, double alpha, int options_kind, int options_device);
void atg_hamming_window3(tensor *, int64_t window_length, int periodic, double alpha, double beta, int options_kind, int options_device);
void atg_hann_window(tensor *, int64_t window_length, int options_kind, int options_device);
void atg_hann_window1(tensor *, int64_t window_length, int periodic, int options_kind, int options_device);
void atg_hardshrink(tensor *, tensor self);
void atg_hardshrink_backward(tensor *, tensor grad_out, tensor self, scalar lambd);
void atg_hardtanh(tensor *, tensor self);
void atg_hardtanh_(tensor *, tensor self);
void atg_hardtanh_out(tensor *, tensor output, tensor self);
void atg_hinge_embedding_loss(tensor *, tensor self, tensor target, double margin, int64_t reduction);
void atg_histc(tensor *, tensor self, int64_t bins);
void atg_histc_out(tensor *, tensor result, tensor self, int64_t bins);
void atg_hspmm(tensor *, tensor mat1, tensor mat2);
void atg_hspmm_out(tensor *, tensor result, tensor mat1, tensor mat2);
void atg_ifft(tensor *, tensor self, int64_t signal_ndim, int normalized);
void atg_index(tensor *, tensor self, tensor *indices_data, int indices_len);
void atg_index_add_(tensor *, tensor self, int64_t dim, tensor index, tensor source);
void atg_index_copy_(tensor *, tensor self, int64_t dim, tensor index, tensor source);
void atg_index_fill_(tensor *, tensor self, int64_t dim, tensor index, scalar value);
void atg_index_fill_1(tensor *, tensor self, int64_t dim, tensor index, tensor value);
void atg_index_put(tensor *, tensor self, tensor *indices_data, int indices_len, tensor values);
void atg_index_put_(tensor *, tensor self, tensor *indices_data, int indices_len, tensor values);
void atg_index_select(tensor *, tensor self, int64_t dim, tensor index);
void atg_index_select_out(tensor *, tensor result, tensor self, int64_t dim, tensor index);
void atg_indices(tensor *, tensor self);
void atg_instance_norm(tensor *, tensor input, tensor weight, tensor bias, tensor running_mean, tensor running_var, int use_input_stats, double momentum, double eps, int cudnn_enabled);
void atg_inverse(tensor *, tensor self);
void atg_inverse_out(tensor *, tensor result, tensor self);
void atg_irfft(tensor *, tensor self, int64_t signal_ndim, int normalized, int onesided, int64_t *signal_sizes_data, int signal_sizes_len);
void atg_isclose(tensor *, tensor self, tensor other, double rtol, double atol, int equal_nan);
void atg_kl_div(tensor *, tensor self, tensor target, int64_t reduction);
void atg_kl_div_backward(tensor *, tensor grad_output, tensor self, tensor target, int64_t reduction);
void atg_kthvalue(tensor *, tensor self, int64_t k, int64_t dim, int keepdim);
void atg_kthvalue_out(tensor *, tensor values, tensor indices, tensor self, int64_t k, int64_t dim, int keepdim);
void atg_l1_loss(tensor *, tensor self, tensor target, int64_t reduction);
void atg_l1_loss_backward(tensor *, tensor grad_output, tensor self, tensor target, int64_t reduction);
void atg_l1_loss_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, tensor target, int64_t reduction);
void atg_l1_loss_out(tensor *, tensor output, tensor self, tensor target, int64_t reduction);
void atg_layer_norm(tensor *, tensor input, int64_t *normalized_shape_data, int normalized_shape_len, tensor weight, tensor bias, double eps, int cudnn_enable);
void atg_le(tensor *, tensor self, scalar other);
void atg_le1(tensor *, tensor self, tensor other);
void atg_le_(tensor *, tensor self, scalar other);
void atg_le_1(tensor *, tensor self, tensor other);
void atg_le_out(tensor *, tensor result, tensor self, scalar other);
void atg_le_out1(tensor *, tensor result, tensor self, tensor other);
void atg_leaky_relu(tensor *, tensor self);
void atg_leaky_relu_(tensor *, tensor self);
void atg_leaky_relu_out(tensor *, tensor output, tensor self);
void atg_lerp(tensor *, tensor self, tensor end, scalar weight);
void atg_lerp_(tensor *, tensor self, tensor end, scalar weight);
void atg_lerp_out(tensor *, tensor result, tensor self, tensor end, scalar weight);
void atg_lgamma(tensor *, tensor self);
void atg_lgamma_(tensor *, tensor self);
void atg_lgamma_out(tensor *, tensor result, tensor self);
void atg_linear(tensor *, tensor input, tensor weight, tensor bias);
void atg_linspace(tensor *, scalar start, scalar end, int options_kind, int options_device);
void atg_linspace1(tensor *, scalar start, scalar end, int64_t steps, int options_kind, int options_device);