torch-sys/src/c_generated.rs

    pub fn atg_full(size_data: *const i64, size_len: c_int, fill_value_: *mut C_scalar, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_full_like(self_: *mut C_tensor, fill_value_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_full_like1(self_: *mut C_tensor, fill_value_: *mut C_scalar, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_full_out(result_: *mut C_tensor, size_data: *const i64, size_len: c_int, fill_value_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_gather(self_: *mut C_tensor, dim_: i64, index_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_gather_out(result_: *mut C_tensor, self_: *mut C_tensor, dim_: i64, index_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_ge(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_ge1(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_ge_(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_ge_1(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_ge_out(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_ge_out1(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_gels(self_: *mut C_tensor, A_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_gels_out(X_: *mut C_tensor, qr_: *mut C_tensor, self_: *mut C_tensor, A_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_geometric_(self_: *mut C_tensor, p_: f64) -> *mut *mut C_tensor;
    pub fn atg_geqrf(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_geqrf_out(result0_: *mut C_tensor, result1_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_ger(self_: *mut C_tensor, vec2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_ger_out(result_: *mut C_tensor, self_: *mut C_tensor, vec2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_gesv(self_: *mut C_tensor, A_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_gesv_out(solution_: *mut C_tensor, lu_: *mut C_tensor, self_: *mut C_tensor, A_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_glu(self_: *mut C_tensor, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_glu_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_glu_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_glu_out(output_: *mut C_tensor, self_: *mut C_tensor, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_grad(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_grid_sampler(input_: *mut C_tensor, grid_: *mut C_tensor, interpolation_mode_: i64, padding_mode_: i64) -> *mut *mut C_tensor;
    pub fn atg_grid_sampler_2d(input_: *mut C_tensor, grid_: *mut C_tensor, interpolation_mode_: i64, padding_mode_: i64) -> *mut *mut C_tensor;
    pub fn atg_grid_sampler_2d_backward(grad_output_: *mut C_tensor, input_: *mut C_tensor, grid_: *mut C_tensor, interpolation_mode_: i64, padding_mode_: i64) -> *mut *mut C_tensor;
    pub fn atg_grid_sampler_3d(input_: *mut C_tensor, grid_: *mut C_tensor, interpolation_mode_: i64, padding_mode_: i64) -> *mut *mut C_tensor;
    pub fn atg_grid_sampler_3d_backward(grad_output_: *mut C_tensor, input_: *mut C_tensor, grid_: *mut C_tensor, interpolation_mode_: i64, padding_mode_: i64) -> *mut *mut C_tensor;
    pub fn atg_group_norm(input_: *mut C_tensor, num_groups_: i64, weight_: *mut C_tensor, bias_: *mut C_tensor, eps_: f64, cudnn_enabled_: c_int) -> *mut *mut C_tensor;
    pub fn atg_gru(input_: *mut C_tensor, hx_: *mut C_tensor, params_data: *const *mut C_tensor, params_len: c_int, has_biases_: c_int, num_layers_: i64, dropout_: f64, train_: c_int, bidirectional_: c_int, batch_first_: c_int) -> *mut *mut C_tensor;
    pub fn atg_gru1(data_: *mut C_tensor, batch_sizes_: *mut C_tensor, hx_: *mut C_tensor, params_data: *const *mut C_tensor, params_len: c_int, has_biases_: c_int, num_layers_: i64, dropout_: f64, train_: c_int, bidirectional_: c_int) -> *mut *mut C_tensor;
    pub fn atg_gru_cell(input_: *mut C_tensor, hx_: *mut C_tensor, w_ih_: *mut C_tensor, w_hh_: *mut C_tensor, b_ih_: *mut C_tensor, b_hh_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_gt(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_gt1(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_gt_(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_gt_1(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_gt_out(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_gt_out1(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_hamming_window(window_length_: i64, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_hamming_window1(window_length_: i64, periodic_: c_int, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_hamming_window2(window_length_: i64, periodic_: c_int, alpha_: f64, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_hamming_window3(window_length_: i64, periodic_: c_int, alpha_: f64, beta_: f64, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_hann_window(window_length_: i64, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_hann_window1(window_length_: i64, periodic_: c_int, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_hardshrink(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_hardshrink_backward(grad_out_: *mut C_tensor, self_: *mut C_tensor, lambd_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_hardtanh(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_hardtanh_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_hardtanh_out(output_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_hinge_embedding_loss(self_: *mut C_tensor, target_: *mut C_tensor, margin_: f64, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_histc(self_: *mut C_tensor, bins_: i64) -> *mut *mut C_tensor;
    pub fn atg_histc_out(result_: *mut C_tensor, self_: *mut C_tensor, bins_: i64) -> *mut *mut C_tensor;
    pub fn atg_hspmm(mat1_: *mut C_tensor, mat2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_hspmm_out(result_: *mut C_tensor, mat1_: *mut C_tensor, mat2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_ifft(self_: *mut C_tensor, signal_ndim_: i64, normalized_: c_int) -> *mut *mut C_tensor;
    pub fn atg_index(self_: *mut C_tensor, indices_data: *const *mut C_tensor, indices_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_index_add_(self_: *mut C_tensor, dim_: i64, index_: *mut C_tensor, source_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_index_copy_(self_: *mut C_tensor, dim_: i64, index_: *mut C_tensor, source_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_index_fill_(self_: *mut C_tensor, dim_: i64, index_: *mut C_tensor, value_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_index_fill_1(self_: *mut C_tensor, dim_: i64, index_: *mut C_tensor, value_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_index_put(self_: *mut C_tensor, indices_data: *const *mut C_tensor, indices_len: c_int, values_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_index_put_(self_: *mut C_tensor, indices_data: *const *mut C_tensor, indices_len: c_int, values_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_index_select(self_: *mut C_tensor, dim_: i64, index_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_index_select_out(result_: *mut C_tensor, self_: *mut C_tensor, dim_: i64, index_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_indices(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_instance_norm(input_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor, running_mean_: *mut C_tensor, running_var_: *mut C_tensor, use_input_stats_: c_int, momentum_: f64, eps_: f64, cudnn_enabled_: c_int) -> *mut *mut C_tensor;
    pub fn atg_inverse(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_inverse_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_irfft(self_: *mut C_tensor, signal_ndim_: i64, normalized_: c_int, onesided_: c_int, signal_sizes_data: *const i64, signal_sizes_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_isclose(self_: *mut C_tensor, other_: *mut C_tensor, rtol_: f64, atol_: f64, equal_nan_: c_int) -> *mut *mut C_tensor;
    pub fn atg_kl_div(self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_kl_div_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_kthvalue(self_: *mut C_tensor, k_: i64, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_kthvalue_out(values_: *mut C_tensor, indices_: *mut C_tensor, self_: *mut C_tensor, k_: i64, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_l1_loss(self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_l1_loss_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_l1_loss_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_l1_loss_out(output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_layer_norm(input_: *mut C_tensor, normalized_shape_data: *const i64, normalized_shape_len: c_int, weight_: *mut C_tensor, bias_: *mut C_tensor, eps_: f64, cudnn_enable_: c_int) -> *mut *mut C_tensor;
    pub fn atg_le(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_le1(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_le_(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_le_1(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_le_out(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_le_out1(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_leaky_relu(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_leaky_relu_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_leaky_relu_out(output_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_lerp(self_: *mut C_tensor, end_: *mut C_tensor, weight_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_lerp_(self_: *mut C_tensor, end_: *mut C_tensor, weight_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_lerp_out(result_: *mut C_tensor, self_: *mut C_tensor, end_: *mut C_tensor, weight_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_lgamma(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_lgamma_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_lgamma_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_linear(input_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_linspace(start_: *mut C_scalar, end_: *mut C_scalar, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_linspace1(start_: *mut C_scalar, end_: *mut C_scalar, steps_: i64, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
